--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,39 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@font-face {
+  font-family: 'Dubai';
+  src: url('../fonts/DubaiW23-Light.ttf') format('truetype');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Dubai';
+  src: url('../fonts/DubaiW23-Medium.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Dubai';
+  src: url('../fonts/DubaiW23-Regular.ttf') format('truetype');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Dubai';
+  src: url('../fonts/DubaiW23-Bold.ttf') format('truetype');
+  font-weight: 700;
+}
+
+ion-content {
+  font-family: 'Dubai' !important;
+}
+
+ion-buttons, .toolbar-content, .tab-button-text {
+  font-family: 'Dubai' !important;
+}
+
+* {
+  font-family:1.1em;
+}
