--- a/src/components/vat-article/vat-article.scss
+++ b/src/components/vat-article/vat-article.scss
@@ -17,4 +17,14 @@ vat-article {
   .reflink {
     color:steelblue;
   }
+
+  .deflink {
+    color:darkslateblue;
+  }
+
+  .postcontent {
+    font-style:italic;
+    padding-top:8px;
+  }
+
 }
