--- a/src/pages/law/law.scss
+++ b/src/pages/law/law.scss
@@ -1,13 +1,22 @@
 page-law {
   .clause{
-    padding-left:15px;
+    padding-left:8px;
   }
 
   .paragraph{
-    padding-left:30px;
+    padding-left:16px;
+  }
+
+  .subparagraph{
+    padding-left:24px;
   }
 
   ion-card-header {
     text-overflow:visible;
+    font-style:bold;
+  }
+
+  ion-card-content {
+    font-style:normal;
   }
 }
