--- a/src/components/news-article/news-article.html
+++ b/src/components/news-article/news-article.html
@@ -16,6 +16,6 @@
     </ion-grid>
   </ion-card-header>
   <ion-card-content>
-    {{news.title}}
+    <span class = 'title'>{{news.title}}</span>
   </ion-card-content>
 </ion-card>
