--- a/src/components/vat-article/vat-article.scss
+++ b/src/components/vat-article/vat-article.scss
@@ -19,7 +19,8 @@ vat-article {
   }
 
   .deflink {
-    color:darkslateblue;
+    color:steelblue;
+    font-style:italic;
   }
 
   .postcontent {
